feat: set seeds as args

--- a/quic/s2n-quic-sim/plans/plan.tmpl
+++ b/quic/s2n-quic-sim/plans/plan.tmpl
@@ -13,6 +13,8 @@ stream_data = {{ stream_data }}
 delay = "{{ delay }}"
 # e.g. 0.2
 drop_rate = {{ drop_rate }}
+# seed
+seed = {{ seed }}
 
 [report.tx-packets]
 filters = ["conn.success", "conn.client"]
